--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,13 @@
 }
 
 .container {
-   margin: 0 auto;
-   width: 1140px;
+    position: relative;
+    margin: 0 auto;
+    width: 1140px;
 }
 
 .promo {
-    height: 800px;
+    min-height: 800px;
     background: url('../img/bg/main_bg.jpg') center center/cover no-repeat;
     padding: 38px 0 61px 0;
 }
@@ -79,7 +80,7 @@ h2.title {
     text-transform: uppercase;
 }
 
-.promo_btn {
+.promo_btn, .gift_btn {
     display: block;
     margin: 0 auto;
     margin-top: 71px;
@@ -117,12 +118,12 @@ h2.title {
 }
 
 .waiting {
-    height: 607px;
+    min-height: 607px;
     background: #EFEFEF;
     padding: 88px 0 75px 0;
 }
 
-.waiting_header {
+.waiting_header, .finish_header {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -132,10 +133,12 @@ h2.title {
     color: #252525;
 }
 
-.waiting_line {
+.waiting_line, .finish_line {
     background: #F9BF3B;
     margin: 0 auto;
     margin-top: 18px;
+    width: 220px;
+    height: 7px;
 }
 
 .waiting_subheader {
@@ -150,17 +153,170 @@ h2.title {
 
 .waiting_wrapper {
     margin-top: 18px;
+    display: flex;
+    justify-content: space-between;
+
 }
 
 .waiting_item {
-    display: inline-block;
     width: 342px;
-    vertical-align: top;
+}
+
+.waiting_img {
+    width: 100%;
+}
+
+.waiting_descr {
+    margin-top: 28px;
     text-align: center;
 }
 
-#center {
-    margin: 0 48px 0 48px;
+.optimization {
+    min-height: 547px;
+    padding: 61px 0 74px 0;
 }
 
+.optimization_header {
+    margin-left: 391px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+    text-transform: uppercase;
+    color: #299CBD;
+}
 
+.optimization_text {
+    margin-left: 391px;
+    margin-top: 25px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 17px;
+    line-height: 27px;
+    color: #4A4A4A;
+}
+
+.optimization_text span {
+    font-weight: 700;    
+}
+
+.optimization_img {
+    position: absolute;
+    top: -47px;
+    left: -240px;
+    z-index: -1;
+}
+
+.finish {
+    min-height: 709;
+    background: url('../img/bg/second_bg.jpg') center center/cover no-repeat;
+    padding: 86px 0 69px 0;
+}
+
+.finish_header {
+    color: #EFEFEF;
+}
+
+.finish_wrapper {
+    display: flex;
+    margin-top: 39px;
+    justify-content: space-between;
+}
+
+.finish_item {
+    width: 118px;
+}
+
+.finish_img {
+    width: 100%;
+}
+
+.finish_descr {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 17px;
+    text-align: center;
+    color: #EFEFEF;
+}
+
+.gift {
+    min-height: 628px;
+    background: #EFEFEF;
+    padding: 88px 0 100px 0;
+}
+
+.gift_img {
+    display: block;
+    margin: 0 auto;
+}
+
+.gift_text {
+    margin-top: 45px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 43px;
+    text-align: center;
+    color: #252525;
+}
+
+.webinar {
+    min-width: 512px;
+    padding: 89px 0 51px 0;
+}
+
+.webinar_img {
+    display: block;
+    margin: 0 auto;
+
+}
+
+h2.webinar_header {
+    margin-top: 36px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #252525;
+}
+
+.webinar_text_date {
+    margin-top: 30px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 36px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #299CBD;
+}
+
+.webinar_text_descr {
+    margin-top: 25px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 23px;
+    text-align: center;
+    color: #4A4A4A;
+}
+
+.footer {
+    min-width: 169px;
+    background: #1A1A1A;
+    padding: 57px 0 69px 0;
+}
+
+.footer_ref, .footer_call {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    text-align: center;
+    color: #888888;
+}
