--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
     margin: 0;
     padding: 0;
 }
+html {
+    font-family: 'Roboto', sans-serif;
+}
 
 .container {
     position: relative;
@@ -23,7 +26,6 @@
 }
 
 .logo .logo_text {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 15px;
@@ -38,7 +40,6 @@ h1 {
 }
 
 .title {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
     font-size: 41px;
@@ -48,7 +49,6 @@ h1 {
 }
 
 .simple .title_big {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
     font-size: 80px;
@@ -63,7 +63,6 @@ h2.title {
 }
 
 .promo_text {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
     font-size: 21px;
@@ -90,7 +89,6 @@ h2.title {
     top: 551px;
     background: linear-gradient(0deg, #2798B9 0%, #3AB6DA 100%);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 21px;
@@ -102,7 +100,6 @@ h2.title {
 
 .promo_know_more_text {
     margin-top: 71px;
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 100;
     font-size: 15px;
@@ -124,7 +121,6 @@ h2.title {
 }
 
 .waiting_header, .finish_header {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -143,7 +139,6 @@ h2.title {
 
 .waiting_subheader {
     margin-top: 18px;
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 23px;
@@ -178,7 +173,6 @@ h2.title {
 
 .optimization_header {
     margin-left: 391px;
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
     font-size: 28px;
@@ -189,7 +183,6 @@ h2.title {
 .optimization_text {
     margin-left: 391px;
     margin-top: 25px;
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
     font-size: 17px;
@@ -233,7 +226,6 @@ h2.title {
 }
 
 .finish_descr {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
     font-size: 17px;
@@ -254,7 +246,6 @@ h2.title {
 
 .gift_text {
     margin-top: 45px;
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -276,7 +267,6 @@ h2.title {
 
 h2.webinar_header {
     margin-top: 36px;
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -287,7 +277,6 @@ h2.webinar_header {
 
 .webinar_text_date {
     margin-top: 30px;
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
     font-size: 36px;
@@ -298,7 +287,6 @@ h2.webinar_header {
 
 .webinar_text_descr {
     margin-top: 25px;
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 23px;
@@ -313,7 +301,6 @@ h2.webinar_header {
 }
 
 .footer_ref, .footer_call {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
     font-size: 15px;
